--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <div class="col-lg-4">
                 <div class="counter">
                   <h2 class="timer count-title count-number" data-to="10" data-speed="1000"></h2>
-                  <p class="count-text ">De calificacion<br> de huespedes</p>
+                  <p class="count-text ">Nuestra puntuacion<br> por nuestros clientes</p>
                 </div>
               </div>
             </div>
