--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li><a href="index.html" class="active">Inicio</a></li>
-                      <li><a href="property-details.html">San Antonio de Areco</a></li>
+                      <li><a href="property-details.html">Detalles</a></li>
                       <li><a href="contact.html">Contacto</a></li>
                       <li><a href="#"><i class="fa fa-calendar"></i> Reservas </a></li>
                   </ul>   
@@ -110,20 +110,24 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="left-image">
-            <img src="assets/images/mg.JPG" alt="">
-            <a href="property-details.html"><img src="assets/images/featured-icon.png" alt="" style="max-width: 60px; padding: 0px;"></a>
+            <img src="assets/images/logo.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-5">
           <div class="section-heading">
             <h6>| Alberdi 1045 </h6>
-            <h2>Casa totalmente equipada</h2>
+            <h2>nosotras</h2>
           </div>
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  ¿Buscas una casa para relajarte y disfrutar de unos días tranquilos? Veni a <strong>Las Galleguitas</strong> y déjate envolver por la tranquilidad de San Antonio de Areco. Disfruta de un ambiente acogedor y relajante, ideal para desconectar del ajetreo diario. ¡Te esperamos!</div>
+                  En Las Galleguitas, somos un emprendimiento creado por madre e hija con el propósito de ofrecer una experiencia única en San Antonio de Areco. Con una profunda pasión por la hospitalidad y el deseo de compartir lo mejor de nuestra tierra, hemos preparado una encantadora casa de turismo para que nuestros huéspedes disfruten de una estancia inolvidable.
+
+Nuestra dedicación se centra en proporcionar un servicio personalizado y atento, asegurando que cada visitante se sienta acogido y cómodo. Alquilamos temporalmente una hermosa casa, decorada con esmero y equipada para satisfacer todas las necesidades de nuestros huéspedes.
+
+El logo de Las Galleguitas, con sus colores inspirados en la bandera de España, refleja nuestras raíces y el espíritu de nuestro emprendimiento. Las iniciales LG destacan la esencia de nuestra oferta, combinando el caluroso toque personal de madre e hija con un compromiso genuino con la calidad y la atención al detalle.
+Te invitamos a explorar San Antonio de Areco y a disfrutar de una experiencia auténtica y especial con nosotros.</div>
               </div>
             </div>
           </div>
