--- a/property-details.html
+++ b/property-details.html
@@ -94,8 +94,8 @@
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li><a href="index.html" class="active">Inicio</a></li>
-              <li><a href="property-details.html">San Antonio de Areco</a></li>
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="property-details.html" class="active">Detalles</a></li>
               <li><a href="contact.html">Contacto</a></li>
               <li><a href="#"><i class="fa fa-calendar"></i> Reservas </a></li>
             </ul>
@@ -120,57 +120,7 @@
     </div>
   </div>
 
-  <!-- ***** Gallery Section Start ***** -->
-  <div class="gallery section">
-    <div class="container">
-      <div class="section-heading">
-        <h2>Galería de imágenes</h2>
-      </div>
-      <div class="owl-carousel owl-theme">
-        <!-- Slide 1 -->
-        <div class="item">
-          <img src="assets/images/hab1.jpg" alt="Imagen 1">
-        </div>
-        <!-- Slide 2 -->
-        <div class="item">
-          <img src="assets/images/habitaci1.jpg" alt="Imagen 2">
-        </div>
-        <!-- Slide 3 -->
-        <div class="item">
-          <img src="assets/images/cocina.jpg" alt="Imagen 3">
-        </div>
-        <!-- Slide 4 -->
-        <div class="item">
-          <img src="assets/images/comedor.jpg" alt="Imagen 4">
-        </div>
-        <!-- Slide 5 -->
-        <div class="item">
-          <img src="assets/images/habitacion2.jpg" alt="Imagen 5">
-        </div>
-        <!-- Slide 6 -->
-        <div class="item">
-          <img src="assets/images/baño.jpg" alt="Imagen 6">
-        </div>
-        <!-- Slide 7 -->
-        <div class="item">
-          <img src="assets/images/living.jpg" alt="Imagen 7">
-        </div>
-        <!-- Slide 8 -->
-        <div class="item">
-          <img src="assets/images/sofa.jpg" alt="Imagen 8">
-        </div>
-        <!-- Slide 9 -->
-        <div class="item">
-          <img src="assets/images/e690000b-a462-4971-8515-4eadb904d78f.JPG" alt="Imagen 9">
-        </div>
-        <!-- Slide 10 -->
-        <div class="item">
-          <img src="assets/images/mg.JPG" alt="Imagen 10">
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- ***** Gallery Section End ***** -->
+
 
   <div class="single-property section">
     <div class="container">
