--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                       <li><a href="index.html">Inicio</a></li>
                       <li><a href="property-details.html">Detalles</a></li>
                       <li><a href="contact.html" class="active">Contacto</a></li>
-                      <li><a href="#"><i class="fa fa-calendar"></i> Reservas </a></li>
+                      <li><a href="https://wa.me/message/DVIDPX4WBGWHP1"><i class="fa fa-calendar"></i> Reservas </a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -120,7 +120,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <form id="contact-form" action="" method="post">
+          <form id="contact-form" action="mailto:lasgalleguitasr@gmail.com" method="post">
             <div class="row">
               <div class="col-lg-12">
                 <fieldset>
