--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                       <li><a href="index.html" class="active">Inicio</a></li>
                       <li><a href="property-details.html">Detalles</a></li>
                       <li><a href="contact.html">Contacto</a></li>
-                      <li><a href="#"><i class="fa fa-calendar"></i> Reservas </a></li>
+                      <li><a href="https://wa.me/message/DVIDPX4WBGWHP1"><i class="fa fa-calendar"></i> Reservas </a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -122,12 +122,7 @@
             <div class="accordion-item">
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  En Las Galleguitas, somos un emprendimiento creado por madre e hija con el propósito de ofrecer una experiencia única en San Antonio de Areco. Con una profunda pasión por la hospitalidad y el deseo de compartir lo mejor de nuestra tierra, hemos preparado una encantadora casa de turismo para que nuestros huéspedes disfruten de una estancia inolvidable.
-
-Nuestra dedicación se centra en proporcionar un servicio personalizado y atento, asegurando que cada visitante se sienta acogido y cómodo. Alquilamos temporalmente una hermosa casa, decorada con esmero y equipada para satisfacer todas las necesidades de nuestros huéspedes.
-
-El logo de Las Galleguitas, con sus colores inspirados en la bandera de España, refleja nuestras raíces y el espíritu de nuestro emprendimiento. Las iniciales LG destacan la esencia de nuestra oferta, combinando el caluroso toque personal de madre e hija con un compromiso genuino con la calidad y la atención al detalle.
-Te invitamos a explorar San Antonio de Areco y a disfrutar de una experiencia auténtica y especial con nosotros.</div>
+                  Las Galleguitas es un emprendimiento de madre e hija en San Antonio de Areco, donde ofrecemos una acogedora casa de turismo temporario, decorada con esmero y equipada para una estancia cómoda y personalizada. Nuestro logo, inspirado en la bandera de España, refleja nuestras raíces y compromiso con la calidad y atención al detalle. ¡Te invitamos a disfrutar de una experiencia auténtica con nosotros!.</div>
               </div>
             </div>
           </div>
@@ -222,7 +217,7 @@ Te invitamos a explorar San Antonio de Areco y a disfrutar de una experiencia au
           </div>
         </div>
         <div class="col-lg-5">
-          <form id="contact-form" action="" method="post">
+          <form id="contact-form" action="mailto:lasgalleguitasr@gmail.com" method="post" enctype="text/plain">
             <div class="row">
               <div class="col-lg-12">
                 <fieldset>
