--- a/property-details.html
+++ b/property-details.html
@@ -97,7 +97,7 @@
               <li><a href="index.html">Inicio</a></li>
               <li><a href="property-details.html" class="active">Detalles</a></li>
               <li><a href="contact.html">Contacto</a></li>
-              <li><a href="#"><i class="fa fa-calendar"></i> Reservas </a></li>
+              <li><a href="https://wa.me/message/DVIDPX4WBGWHP1"><i class="fa fa-calendar"></i> Reservas </a></li>
             </ul>
             <a class='menu-trigger'>
               <span>Menu</span>
@@ -166,7 +166,7 @@
     </div>
   </div>
 
-  <footer class="footer-no-gap">
+  <footer>
     <div class="container">
       <div class="col-lg-12">
         <p>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved.
