--- a/property-details.html
+++ b/property-details.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="assets/css/owl.css">
   <link rel="stylesheet" href="assets/css/animate.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-  <style>
+  <<style>
     .gallery {
       padding: 60px 0;
     }
@@ -44,6 +44,33 @@
       height: auto; /* Mantiene la proporción de la imagen */
       border-radius: 8px;
     }
+
+    .testimonial {
+      padding: 60px 0;
+      background-color: #f8f9fa;
+    }
+
+    .testimonial .section-heading h2 {
+      font-size: 32px;
+      font-weight: 600;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+
+    .testimonial .testimonial-item {
+      text-align: center;
+      margin: 30px 0;
+    }
+
+    .testimonial .testimonial-item p {
+      font-style: italic;
+    }
+
+    .testimonial .testimonial-item h5 {
+      margin-top: 10px;
+      font-weight: bold;
+    }
+
   </style>
 </head>
 
@@ -169,8 +196,7 @@
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved.
-          Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+        <p>Copyright Las Galleguitas. All rights reserved.
       </div>
     </div>
   </footer>
